--- a/src/components/menu-items/Menu-items.styles.scss
+++ b/src/components/menu-items/Menu-items.styles.scss
@@ -1,16 +1,3 @@
-.homepage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 80px;
-}
-.directory-menu {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
 .menu-item {
   min-width: 30%;
   height: 240px;
@@ -20,6 +7,12 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
+  background-position: center;
+  background-size: cover;
+
+  &.large {
+    height: 380px;
+  }
 
   &:first-child {
     margin-right: 7.5px;
@@ -30,13 +23,14 @@
   }
 
   .content {
-    height: 105px;
-    padding: 0 25px;
+    height: 100px;
+    padding: 0 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     border: 1px solid black;
+    background-color: white;
 
     .title {
       font-weight: bold;
@@ -48,6 +42,7 @@
     .subtitle {
       font-weight: lighter;
       font-size: 16px;
+      margin-bottom: 11px;
     }
   }
 }
