--- a/src/components/menu-items/Menu-items.styles.scss
+++ b/src/components/menu-items/Menu-items.styles.scss
@@ -60,7 +60,7 @@
     justify-content: center;
     border: 1px solid black;
     background-color: white;
-    position: absolute;
+    position: fixed;
 
     .title {
       font-weight: bold;
