--- a/src/components/menu-items/Menu-items.styles.scss
+++ b/src/components/menu-items/Menu-items.styles.scss
@@ -7,9 +7,11 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
-  background-position: center;
-  background-size: cover;
   overflow: hidden;
+
+  &.large {
+    height: 380px;
+  }
 
   &:hover {
     cursor: pointer;
@@ -20,20 +22,8 @@
     }
 
     & .content {
-      .title {
-        transform: scale(0.5);
-        transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
-      }
-      .subtitle {
-        transform: scale(1.3);
-        transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
-      }
-      opacity: 0.8;
+      opacity: 0.7;
     }
-  }
-
-  &.large {
-    height: 380px;
   }
 
   &:first-child {
@@ -52,15 +42,15 @@
   }
 
   .content {
-    height: 100px;
-    padding: 0 20px;
+    height: 90px;
+    padding: 0 25px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     border: 1px solid black;
+    position: absolute;
     background-color: white;
-    position: fixed;
 
     .title {
       font-weight: bold;
@@ -72,7 +62,6 @@
     .subtitle {
       font-weight: lighter;
       font-size: 16px;
-      margin-bottom: 11px;
     }
   }
 }
