--- a/src/components/sign-in-components/sign-in-styles.scss
+++ b/src/components/sign-in-components/sign-in-styles.scss
@@ -1,8 +1,12 @@
 .sign-in {
-  width: 30vw;
+  width: 380px;
   display: flex;
   flex-direction: column;
 }
 .signInheader {
   padding-top: 100px;
+}
+.buttons {
+  display: flex;
+  justify-content: space-between;
 }
