--- a/src/components/sign-in-components/sign-in-styles.scss
+++ b/src/components/sign-in-components/sign-in-styles.scss
@@ -2,9 +2,9 @@
   width: 380px;
   display: flex;
   flex-direction: column;
-}
-.signInheader {
-  padding-top: 100px;
+  .signInheader {
+    margin: 10 px 0;
+  }
 }
 .buttons {
   display: flex;
