--- a/src/Pages/Checkout/checkout.styles.scss
+++ b/src/Pages/Checkout/checkout.styles.scss
@@ -28,4 +28,16 @@
         margin-left: auto;
         font-size: 36px;
     }
+
+    button {
+        margin-left: auto;
+        margin-top: 50px;
+    }
+
+    .test-warning {
+        text-align: center;
+        padding-top: 20px;
+        font-size: 24px;
+        color: grey;
+    }
 }
