--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -1,18 +1,24 @@
 .cart-dropdown {
-    position: absolute;
+    position: fixed;
     width: 240px;
-    height: 340px;
+    height: 360px;
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding: 0px 20px 20px 20px;
     border: 1px solid black;
     background-color: white;
-    top: 90px;
-    right: 40px;
+    bottom: 10px;
+    right: 5px;
     z-index: 5;
 
     body::-webkit-scrollbar {
         width: 1em;
+    }
+
+    .close {
+        font-size: 18px;
+        padding: 5px 0px 5px 195px;
+        cursor: pointer;
     }
 
     .empty-message {
@@ -21,7 +27,8 @@
     }
 
     .cart-items {
-        height: 240px;
+        height: 290px;
+        font-size: 14px;
         display: flex;
         flex-direction: column;
         overflow: auto;
