--- a/src/components/cart-item/cart-item.styles.scss
+++ b/src/components/cart-item/cart-item.styles.scss
@@ -17,7 +17,8 @@
         padding: 10px 20px;
 
         .name {
-            font-size: 16px;
+            font-size: 14px;
+            font-weight: bold;
         }
     }
 }
