--- a/src/components/header/header-styles.scss
+++ b/src/components/header/header-styles.scss
@@ -6,9 +6,34 @@
   margin-bottom: 25px;
 
   .logo-container {
-    height: 100%;
-    width: 70px;
-    padding: 25px;
+    font-family: "Poiret One", cursive;
+    font-size: 40px;
+    display: flex;
+
+    .navHead {
+      background-color: #e2e0d3;
+      border: 0.1px solid black;
+      padding: 18px 5px 0px 5px;
+      animation-name: pulse;
+      animation-duration: 4s;
+    }
+
+    .navHead2 {
+      padding: 18px 0px 0px 5px;
+    }
+
+    @keyframes pulse {
+      0% {
+        -webkit-transform: matrix(-1, 0, 0, 1, 0, 0);
+        -moz-transform: matrix(-1, 0, 0, 1, 0, 0);
+        -o-transform: matrix(-1, 0, 0, 1, 0, 0);
+        transform: matrix(-1, 0, 0, 1, 0, 0);
+      }
+
+      100% {
+        background-color: #ffffff;
+      }
+    }
   }
 
   .options {
@@ -21,6 +46,12 @@
     .option {
       padding: 10px 15px;
       font-weight: 500;
+      font-size: 17px;
+
+      &:hover {
+        background-color: #e2e0d3;
+      }
+
     }
   }
 }
