--- a/src/Pages/Checkout/checkout.styles.scss
+++ b/src/Pages/Checkout/checkout.styles.scss
@@ -37,7 +37,7 @@
     .test-warning {
         text-align: center;
         padding-top: 20px;
-        font-size: 24px;
-        color: grey;
+        font-size: 17px;
+        color: black;
     }
 }
